<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_camera_button"
        android:title="@string/camera_button"
        android:icon="@drawable/ic_camera_alt_white_24dp"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete_all_selfies"
        android:showAsAction="never"
        android:title="@string/action_delete_all_selfies"/>

    <item android:id="@+id/action_alarm_1_min"
        android:showAsAction="never"
        android:title="@string/action_remind_every_1_min"/>
    <item android:id="@+id/action_alarm_2_min"
        android:showAsAction="never"
        android:title="@string/action_remind_every_2_min"/>
    <item android:id="@+id/action_alarm_1_day"
        android:showAsAction="never"
        android:title="@string/action_remind_every_1_day"/>
</menu>
